<<<<<<< HEAD
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project1</string>
    <string name="action_settings">Settings</string>
    <string name="team_name">Anybody Out There?</string>
    <string name="title_activity_stacker">StackerActivity</string>
    <string name="help">Help</string>
    <string name="start">Start</string>
    <string name="one_kg">1Kg</string>
    <string name="two_kg">2Kg</string>
    <string name="five_kg">5Kg</string>
    <string name="ten_kg">10Kg</string>
    <string name="end_turn">Set</string>
    <string name="red_player_score">Jason:  2</string>
    <string name="green_player_score">Bob:  1</string>
    <string name="alert">Alert</string>
    <string name="names_empty">You must input a name for Player Red and Player Green to continue!</string>
    <string name="how_to">How To Play</string>
    <string name="help_text">Welcome to Stacker! \n Two players start by entering their names for team red and team green.  The goal is to place bricks of varying mass to a stack and maintain center of gravity. The player who places a brick that causes the center of gravity to tip loses the round. \n How to: \n 1. A player can selet a brick of a certiain mass by clicking on its respective button. \n 2. The player then drags horizontally to position the brick where they desire. \n 3. After they have placed the brick they can hit the end turn to add it to the stack. After which the center of mass is calculated and permit it is stable the game will go on for the next players turn.</string>
    <string name="begin_game">New Game</string>
    <string name="begin_game_text">Press OK to start the game.</string>
    <string name="stacker_image">Image of stacker</string>
    <string name="player_red_image">Image of player red</string>
    <string name="player_green_image">Image of player green</string>
    <string name="game_over">Game Over</string>
	<string name="winner">%1$s is the winner!</string>
	<string name="onekg">one kg button</string>
	<string name="twokg">two kg button</string>
	<string name="fivekg">five kg button</string>
	<string name="tenkg">ten kg button</string>
	<string name="set">end the player turn</string>
	<string name="usernameInput">Username:</string>
	<string name="password_input">Password:</string>
	<string name="login_button">Login</string>
	<string name="new_user">New User</string>
	<string name="create_user">Create User</string>
	<string name="verify_password">Verify Password:</string>
	<string name="title_activity_opening">StackerOpening</string>
	<string name="title_activity_new_user">NewUser</string>
	<string name="username_password_empty">You must fill out the Username and Password fields!</string>
	<string name="username_password_verify_empty">You must fill out the Username, Password, and Verify Password fields!</string>
    <string name="password_verify_mismatch">The Password and Verify Password fields must match!</string>
    <string name="login_fail">Your Username/Password is incorrect.</string>
    <string name="login_success">You logged in!</string>
<<<<<<< HEAD
    <string name="lobby">Lobby</string>
=======
    <string name="remember_me">Remember Me</string>
>>>>>>> 9cc2413f8222ab070217b4c37e2d20bcc2a9d001
	
</resources>
=======
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project1</string>
    <string name="action_settings">Settings</string>
    <string name="team_name">Anybody Out There?</string>
    <string name="title_activity_stacker">StackerActivity</string>
    <string name="help">Help</string>
    <string name="start">Start</string>
    <string name="one_kg">1Kg</string>
    <string name="two_kg">2Kg</string>
    <string name="five_kg">5Kg</string>
    <string name="ten_kg">10Kg</string>
    <string name="end_turn">Set</string>
    <string name="red_player_score">Jason:  2</string>
    <string name="green_player_score">Bob:  1</string>
    <string name="alert">Alert</string>
    <string name="names_empty">You must input a name for Player Red and Player Green to continue!</string>
    <string name="how_to">How To Play</string>
    <string name="help_text">Welcome to Stacker! \n Two players start by entering their names for team red and team green.  The goal is to place bricks of varying mass to a stack and maintain center of gravity. The player who places a brick that causes the center of gravity to tip loses the round. \n How to: \n 1. A player can selet a brick of a certiain mass by clicking on its respective button. \n 2. The player then drags horizontally to position the brick where they desire. \n 3. After they have placed the brick they can hit the end turn to add it to the stack. After which the center of mass is calculated and permit it is stable the game will go on for the next players turn.</string>
    <string name="begin_game">New Game</string>
    <string name="begin_game_text">Press OK to start the game.</string>
    <string name="stacker_image">Image of stacker</string>
    <string name="player_red_image">Image of player red</string>
    <string name="player_green_image">Image of player green</string>
    <string name="game_over">Game Over</string>
    <string name="winner">%1$s is the winner!</string>
    <string name="onekg">one kg button</string>
    <string name="twokg">two kg button</string>
    <string name="fivekg">five kg button</string>
    <string name="tenkg">ten kg button</string>
    <string name="set">end the player turn</string>
    <string name="usernameInput">Username:</string>
    <string name="password_input">Password:</string>
    <string name="login_button">Login</string>
    <string name="new_user">New User</string>
    <string name="create_user">Create User</string>
    <string name="verify_password">Verify Password:</string>
    <string name="title_activity_opening">StackerOpening</string>
    <string name="title_activity_new_user">NewUser</string>
    <string name="username_password_empty">You must fill out the Username and Password fields!</string>
    <string name="username_password_verify_empty">You must fill out the Username, Password, and Verify Password fields!</string>
    <string name="password_verify_mismatch">The Password and Verify Password fields must match!</string>
    <string name="login_fail">Your Username/Password is incorrect.</string>
    <string name="login_success">You logged in!</string>
    <string name="remember_me">Remember Me</string>
    <string name="connect_fail">Cannot connect to the server.</string>
    <string name="title_activity_waiting">WaitingActivity</string>
    <string name="waiting">Waiting</string>
    <string name="join_fail">Fail to join a game!</string>
    <string name="join_success">Another player found! Join a game!</string>
    <string name="you">You</string>
    <string name="your_opponent">Opponent</string>

</resources>
>>>>>>> 0f337abb27f1dc392674196bfed4789381c33fc5
