<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stacker_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".StackerActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight=".09">
		<FrameLayout
		    android:id="@+id/centerpoint"
		    android:layout_centerInParent="true"
		    android:layout_width="0dp"
    		android:layout_height="0dp">
		</FrameLayout>
		<FrameLayout
		    android:layout_alignRight="@+id/centerpoint"
		    android:layout_width="match_parent"
    		android:layout_height="match_parent">
		   	<TextView
		        android:id="@+id/RedPlayerScore"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:gravity="center_vertical|center_horizontal"
		        android:textAppearance="?android:attr/textAppearanceMedium" /> 
		</FrameLayout>
		<FrameLayout
		    android:layout_alignLeft="@+id/centerpoint"
		    android:layout_width="match_parent"
    		android:layout_height="match_parent" >
		    <TextView
	        	android:id="@+id/GreenPlayerScore"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:gravity="center_vertical|center_horizontal"
	        	android:textAppearance="?android:attr/textAppearanceMedium" />
		</FrameLayout>
    </RelativeLayout>
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:background="@drawable/stackerviewbackground" >

        <heiderse.msu.edu.project1.StackView
            android:id="@+id/stackView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".11"
        android:gravity="center_vertical|center_horizontal"	>	
        <Button
            android:id="@+id/OneKgButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:onClick="onOneKg"
            android:text="@string/one_kg" />

        <Button
            android:id="@+id/TwoKgButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:layout_toRightOf="@id/OneKgButton"
            android:onClick="onTwoKg"
            android:text="@string/two_kg" />

        <Button
            android:id="@+id/FiveKgButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:layout_toRightOf="@id/TwoKgButton"
            android:onClick="onFiveKg"
            android:text="@string/five_kg" />

        <Button
            android:id="@+id/TenKgButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:layout_toRightOf="@id/FiveKgButton"
            android:onClick="onTenKg"
            android:text="@string/ten_kg" />

         <Button
             android:id="@+id/EndTurnButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:onClick="onEndTurn"
             android:layout_toRightOf="@id/TenKgButton"
             android:text="@string/end_turn" />
        
    </RelativeLayout>

</LinearLayout>
