<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:descendantFocusability="beforeDescendants"
    tools:context=".MainActivity" >
    <FrameLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5">
	    <ImageView
	        android:contentDescription="@+string/stacker_image"
	        android:layout_gravity="center"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
	        android:src="@drawable/stacker" />  
    </FrameLayout>
    <FrameLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1">
        <ImageView
            android:contentDescription="@+string/team_name"
        	android:id="@+id/teamName"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="center"
        	android:src="@drawable/group_name" /> 
    </FrameLayout>

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight=".1" >

	    <RelativeLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true" >

	        <TextView
	            android:id="@+id/usernameText"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@id/editUsername"
	            android:paddingLeft="15dp"
	            android:text="@string/usernameInput" />

	        <EditText
	            android:id="@+id/editUsername"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/usernameText"
	            android:ems="10"
	            android:inputType="text" />

	    </RelativeLayout>
	</RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight=".1">

    	<RelativeLayout
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_centerInParent="true" >

    	    <TextView
    	        android:id="@+id/passwordText"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_alignBaseline="@id/editPassword"
    	        android:paddingLeft="15dp"
    	        android:text="@string/password_input" />

    	    <EditText
    	        android:id="@+id/editPassword"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_toRightOf="@id/passwordText"
    	        android:ems="10"
    	        android:inputType="textPassword" />

    	</RelativeLayout>

	</RelativeLayout>
	<FrameLayout
	    android:id="@+id/spacertop" 
	    android:layout_weight=".05"
	    android:layout_height="0dp"
	    android:layout_width="match_parent">
	</FrameLayout>
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight=".1">
    	<FrameLayout
    	    android:id="@+id/centerpoint4"
    	    android:layout_width="0dp"
	        android:layout_height="0dp"
	        android:layout_centerInParent="true">
    	</FrameLayout>

    	<Button
    	    android:id="@+id/loginButton"
    	    android:layout_width="105dp"
    	    android:layout_height="50dp"
    	    android:layout_alignLeft="@id/centerpoint4"
    	    android:layout_marginLeft="30dp"
    	    android:text="@string/login_button" />

    	<Button
    	    android:id="@+id/newUserButton"
    	    android:layout_width="105dp"
    	    android:layout_height="50dp"
    	    android:layout_alignRight="@id/centerpoint4"
    	    android:layout_marginRight="30dp"
    	    android:text="@string/new_user" />

	</RelativeLayout>
	<FrameLayout
	    android:id="@+id/spacerbottom" 
	    android:layout_weight=".05"
	    android:layout_height="0dp"
	    android:layout_width="match_parent">
	</FrameLayout>
</LinearLayout>
